--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "node-sass": "^7.0.1",
     "react": "^16.8.0",
+    "react-app-polyfill": "3.0.0",
     "react-app-rewired": "^2.1.5",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.8.0",
