--- a/web/package.json
+++ b/web/package.json
@@ -43,7 +43,7 @@
     "react-app-rewired": "^2.1.5",
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.8.0",
-    "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router": "~5.0.1",
