--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "ts-jest": "^27.1.3"
   },
   "engines": {
-    "node": ">=14.0.0 <18.0.0",
-    "npm": "^6.4.0"
+    "node": ">=14.0.0 <21.0.0",
+    "npm": ">=6.4.0 <10.8.0"
   }
 }
