--- a/web/package.json
+++ b/web/package.json
@@ -27,8 +27,8 @@
     "@tanstack/react-query": "^4.29.1",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "@types/react-router": "~5.0.1",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@types/spotify-api": "0.0.2",
     "classnames": "^2.2.6",
     "compress-create-react-app": "^1.4.4",
@@ -47,8 +47,8 @@
     "react-ga4": "^2.1.0",
     "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.0",
-    "react-router": "~5.0.1",
-    "react-router-dom": "~5.0.1",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.0",
     "react-virtuoso": "^2.19.1",
     "redux": "^4.0.5",
